--- a/index.html
+++ b/index.html
@@ -46,16 +46,19 @@
 <body>
   <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="aba45236-a601-47b7-b723-38e3f93babd9";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
-  <header>خرید فیلترشکن v2ray</header>
+  <header>خرید سرور v2ray</header>
 <article>	
   <h1>خرید فیلترشکن v2ray</h1>
   <p>شاید سوال بیشتر شما پس از مطالعه مطالب بالا این باشد که فیلترشکن امن و پرسرعت v2ray را چگونه می توانیم دریافت و تهیه کنیم؟ در پاسخ به شما می گوییم که پروسه خرید فیلترشکن v2ray بسیار آسان و فوری است و اصلا نیاز به صرف زمان و پول زیاد نیست و با کمترین هزینه می توانید بهترین کیفیت را از آروان دریافت کنید. پروسه خرید فیلترشکن v2ray : 1- اول از هر کاری این مقاله ما را لایک کنید 2- به صفحه چت آنلاین آروان بروید یا اینکه آیدی @arvanvip در ایتا یا روبیکا و یا به آیدی @filterarvan در تلگرام بروید و خرید خود را انجام دهید 3- از پشتیبان ها خواستار دریافت اکانت v2ray تستی باشید 4- پس از انجام تست و رضایت لیست تعرفه را از پشتیبان بگیرید 5- پس از انتخاب سرویس موردنظر شماره کارت را از پشتیبان بگیرید 6- هزینه را واریز کرده و عکس رسید را برای پشتیبان ارسال کنید 7- تبریک می گویم شما فیلترشکن v2ray را خریدید 8- حالا از مشتری خواستار دریافت لینک کانفیگ و آموزش لازمه باشید</p>
+  <p>لازمه استفاده از آیپی لوکیشن خارج و اینترنت آزاد اتصال به فیلترشکن v2ray است که باعث می شود اینترنت پرسرعتی داشته باشید و از سرعت فضایی لذت ببرید.</p>
   <br>
   <h2>خرید سرور v2ray</h2>
   <p>به شیوه کلی 90 درصد مردم ایران ناچار به استفاده از فیلترشکن هستند و همین امر هم باعث شده که کسان زیادی فروشنده سرور v2ray شوند و کیفیت خوبی هم ارائه نمی دهند. با خرید سرور v2ray به آسانی می توانید به بهترین سرعت اینترنت آزاد و بین المللی برسید و بدون فیلترینگ از اینتنرت لذت ببرید؛ اما خرید هر سروری باعث درمان درد شما نمی شود و باید از تیمی خریداری کنید که بیشترین تجربه را در این راه دارد. افراد زیادی هستند که می توانید از آنان سرور v2ray بخرید اما بیشتر آنان کیفیت بسیار پایینی را ارائه می دهند و نمی توان بهشان اطمینان کرد که از سرور های بی کیفیت برای کانفیگ کردن استفاده نمی کنند. بهترین انتخاب برای خرید سرور v2ray مراجعه به تیم آروان فیلتر است؛ با استفاده از تلگرام ، روبیکا و ایتا می توانید این کار را انجام دهید.</p>
+  <p>بی شک استفاده از فیلترشکن یک نیاز حتی هست که باید هر کسی از آن برخوردار باشد که آن را فقط با خرید سرور v2ray می توانید داشته باشید.</p>
   <br>
   <h2>خرید اشتراک v2ray</h2>
   <p>شاید در اینجا برای شما سوالی پیش آید که آیا فرق اشتراک v2ray با سرور v2ray چیست؟ باید گفت که هیچ فرقی ندارند و هردو برای اتصال به شبکه برنامه v2ray می باشند و با استفاده از آن نباشد نمی توانیم به ایپی ثابت خود متصل شویم و از آن به عنوان فیلترشکن استفاده کنیم. اما باید گفت که خرید اشتراک v2ray صرفا برای استفاده در فیلترشکن آندرویدی v2ray نیست و در NapsternetV و Nekotay هم می توانید از این اشتراک استفاده نمایید و در کل برای تمامی دیوایس ها و اپراتور خرید یک اشتراک v2ray از تیم آروان کافیست.</p>
+  <p>یکی از فرق های فیلترشکن v2ray با دیگر فیلترشکن ها وجود سرعت استثنایی و امنیت بالاست که با خرید اشتراک v2ray می توانید به این مهم دستیابید.</p>
   <br>
   <h2>فیلترشکن چیست؟</h2>
   <p>به برنامه ای که محدودیت های اینترنتی را از بین میبرد و باعث آزادسازی اینترنت از هر فیلتری می شود را فیلترشکن یا همان VPN می گویند که مخفف Virtual Private Network به معنای شبکه خصوصی مجازی است. فیلترشکن برای تمامی دستگاه وجود دارد که بتوانند با استفاده از آن به سایت ها یا برنامه های فیلتر شده مانند: اینستاگرام ، تلگرام ، واتساپ و غیره دسترسی پیدا کنند. اما برنامه فیلترشکن برای تمامی دستگاه ها و دیوایس متفاوت است، مثلا برای آندروید می توانید از v2rayng استفاده کنید و برای آیفون از NapsternetV یا V2box استفاده کنید و برای سیستم های کامپیوتری هم از V2rayN یا Nekoray می توانید استفاده کنید.</p>
@@ -66,11 +69,11 @@
   <h2>آیا فیلترشکن v2ray پشتیبانی می شود؟</h2>
   <p>بله، تیم بسیار فعال و پر تلاش آروان فیلتر تیم پشتیبانی 24 ساعته دارد و توانایی این را دارند که در کمترین زمان ممکن مشکل شما را رفع کرده و با بهترین سرعت ممکن پاسخگوی شما عزیزان باشند. پس از خرید فیلترشکن v2ray تا آن روز که اشتراک شما به پایان برسد پشتیبانی دریافت خواهید کرد و دیگر حتی 1 ثانیه هم بدون اینترنت و vpn نخواهید بود و بهترین بازدهی را برایتان خواهد داشت. پشتیبانی فقط در تیم آروان فیلتر به صورت شبانه روزی و یکسره انجام می شود و اگر از دیگران خرید کنید این سرعت و پشتیبانی را نخواهید داشت.</p>
   <br>
-  <h2>آموزش اتصال به فیلترشکن v2ray</h2>
-  <p>فیلترشکن v2ray یک ابزار برای تغییر آیپی دستگاه گوشی ، کامپیوتر ، لپ تاپ و تبلت است که بسیار هم پرسرعت و امن است و به همین دلیل کاربران زیادی در ایران و جهان دارد. شیوه اتصال به کانفیگ فیلترشکن v2ray به ترتیب زیر است: 1- دریافت فایل نصبی یا لینک دانلود برنامه v2rayng 2- دانلود و نصب برنامه v2rayng 3- دریافت لینک کانفیگ فیلترشکن v2ray از پشتیبان آروان 4- کپی لینک دریافت شده از پشتیبان 5- ورود به برنامه v2rayng 6- کلیک روی علامت به اضافه ( + ) بالای برنامه 7- کلیک روی دومین گزینه که import config from clipboard است 8- کانفیگ فیلترشکن v2ray به برنامع اضافه می شود 9- حالا روی آن کلیک کنید و آیکن دایره شکل V را که لوگوی v2ray هست را کلیک کنید 10- تبریک میگم، فیلترشکن روشن شد و متصل شدید!</p>
+  <h2>آموزش اتصال به سرور v2ray</h2>
+  <p>سرور v2ray یک ابزار برای تغییر آیپی دستگاه گوشی ، کامپیوتر ، لپ تاپ و تبلت است که بسیار هم پرسرعت و امن است و به همین دلیل کاربران زیادی در ایران و جهان دارد. شیوه اتصال به کانفیگ سرور v2ray به ترتیب زیر است: 1- دریافت فایل نصبی یا لینک دانلود برنامه v2rayng 2- دانلود و نصب برنامه v2rayng 3- دریافت لینک کانفیگ سرور v2ray از پشتیبان آروان 4- کپی لینک دریافت شده از پشتیبان 5- ورود به برنامه v2rayng 6- کلیک روی علامت به اضافه ( + ) بالای برنامه 7- کلیک روی دومین گزینه که import config from clipboard است 8- کانفیگ سرور v2ray به برنامع اضافه می شود 9- حالا روی آن کلیک کنید و آیکن دایره شکل V را که لوگوی v2ray هست را کلیک کنید 10- تبریک میگم، فیلترشکن روشن شد و متصل شدید!</p>
   <br>
-  <h2>نتیجه گیری خرید فیلترشکن v2ray :</h2>
-  <p>خرید فیلترشکن v2ray پرسرعت و بدون قطعی را فقط می توانید از تیم آروان با کمترین هزینه تهیه کنید و لذت اینترنت آزاد را در کشور تحریم شده و محدود ببرید. قطعا یاد گرفتیم که کار فیلترشکن صرفا تغییر آیپی دستگاه است و کاری به اطلاعات داخل گوشی شما ندارد؛ مگر اینکه فیلترشکن رایگان باشد، چون انگیزه آنان برای خدمت دستیابی به اطلاعات شخصی داخل گوشی یا کامپیوتر شماست.</p>
+  <h2>نتیجه گیری خرید اشتراک v2ray :</h2>
+  <p>خرید اشتراک v2ray پرسرعت و بدون قطعی را فقط می توانید از تیم آروان با کمترین هزینه تهیه کنید و لذت اینترنت آزاد را در کشور تحریم شده و محدود ببرید. قطعا یاد گرفتیم که کار فیلترشکن صرفا تغییر آیپی دستگاه است و کاری به اطلاعات داخل گوشی شما ندارد؛ مگر اینکه فیلترشکن رایگان باشد، چون انگیزه آنان برای خدمت دستیابی به اطلاعات شخصی داخل گوشی یا کامپیوتر شماست.</p>
   <br>
   <span>نتیجه گیری: در کل باید گفت که بهترین فروشگاه برای خرید وی پی ان چه برای ویندوز ، مک ، لینوکس چه برای آندروید ، آیفون یا دیگر دستگاه های دیگر که سطح پیشرفته هستند و به راحتی می توانید یک برنامه مانند v2rayng را در آن نصب و استفاده کنید.</span>
 </article>
